2005-12-22  Marc Singer  <elf@buici.com>

	* src/lib/zlib-heap.c: Makde the zlib heap larger since the
	decompressor was choking on the decode of a large splash image.
	Also moved the memory to xbss.  We're still using a stupid null
	free heap which has to be as large as all of the allocated memory.
	RAM is cheap, at the moment.  Perhaps we should switch to the
	kernel's zlib decompressor instead of the uboot version.

	* src/drivers-lh/drv-clcdc.c: Common LCD driver for Sharp LH
	parts.

	* src/arch-arm/entry/mmu-alloc.c (alloc_uncached): Function to
	allocate memory that won't be cached even when the MMU is enabled.

2005-12-19  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/mmu.c: Service to enable and disable the MMU.
	This makes the boot loader execute much faster than without.

	* src/mach-lh7952x/serial.c (lh7952x_serial_release): Added a
	release function so that serial data in the FIFO is flushed. 

	* src/mach-lh7a40x/serial.c (lh7a40x_serial_release): Added a
	release function so that serial data in the FIFO is flushed.

2005-12-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/lh7a40x.h: Added an overclocking mode.

	* src/mach-lh7a40x/initialize.c: Added more explicit macros to
	handle bus clocking modes.  Also, we've switched to the
	synchronous bus mode as the default.

	* src/mach-lh7a40x/lh7a40x.h: Added more explicit macros to handle
	bus clocking modes. 

	* src/drivers/drv-mem.c: Added memlimit command so that we can
	constrain the amount of memory that the Linux kernel sees.  It's a
	handy debug feature.

2005-11-18  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Added option to inhibit the NOR CFI
	buffered write code, for lnode80.
 
	* src/mach-lh7952x/Kconfig: Added lnode80, patch from Dave Anders.

2005-11-07  Marc Singer  <elf@buici.com>

	* Makefile: Rolling release for 79525 and for a fix to the
	emac79524 driver.

2005-10-08  Marc Singer  <elf@buici.com>
